WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28326
DRT on Windows doesn't support LayoutTestController::setQuota or print a callback on UIDelegate::exceededDatabaseQuota
https://bugs.webkit.org/show_bug.cgi?id=28326
Summary
DRT on Windows doesn't support LayoutTestController::setQuota or print a call...
Brian Weinstein
Reported
2009-08-14 15:30:14 PDT
DRT on Windows doesn't support LayoutTestController::setQuota or print a callback on UIDelegate::exceededDatabaseQuota.
Attachments
Fix
(11.49 KB, patch)
2009-08-17 11:12 PDT
,
Brian Weinstein
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2009-08-17 11:12:37 PDT
Created
attachment 34978
[details]
Fix
Eric Seidel (no email)
Comment 2
2009-08-17 17:21:21 PDT
Comment on
attachment 34978
[details]
Fix I'm confused by this code: COMPtr<IWebDatabaseManager> databaseManager; 731 COMPtr<IWebDatabaseManager> tmpDatabaseManager; 732 733 if (FAILED(WebKitCreateInstance(CLSID_WebDatabaseManager, 0, IID_IWebDatabaseManager, (void**)&tmpDatabaseManager))) 734 return; 735 if (FAILED(tmpDatabaseManager->sharedWebDatabaseManager(&databaseManager))) 736 return; Maybe it could be explained in a comment or the ChangeLgo why you need two IWebDatabaseManager pointers there?
Brian Weinstein
Comment 3
2009-08-17 17:22:25 PDT
I got that code from a different function in the same file that used the same way of getting the real database manager. I can do a little legwork there and figure out why it's doing that though.
Brian Weinstein
Comment 4
2009-08-19 16:42:53 PDT
Committed in
http://trac.webkit.org/changeset/47447
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug