2009-08-17  Brian Weinstein  <bweinstein@apple.com>

Reviewed by Oliver Hunt.

        Fix of <https://bugs.webkit.org/show_bug.cgi?id=28326> DRT on Windows doesn't support
        LayoutTestController::setQuota or print a callback on UIDelegate::exceededDatabaseQuota.

        Implemenent setDatabaseQuota and added a new function to the IWebDatabaseManager interface.
        Also added a console output on UIDelegate::exceededDatabaseQuota to match the mac.

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setDatabaseQuota):
        * DumpRenderTree/win/UIDelegate.cpp:
        (UIDelegate::exceededDatabaseQuota):

2009-08-17  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Oliver Hunt.

        Fix of <https://bugs.webkit.org/show_bug.cgi?id=28326> DRT on Windows doesn't support
        LayoutTestController::setQuota or print a callback on UIDelegate::exceededDatabaseQuota.

        Added a setQuota interface method to IWebDatabaseManager and implemented it.

        * Interfaces/IWebDatabaseManager.idl:
        * WebDatabaseManager.cpp:
        (WebDatabaseManager::setQuota):
        * WebDatabaseManager.h:

2009-08-17  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Oliver Hunt.

        Removed now passing storage tests from the Skipped list, now we pass all storage tests on Windows.

        * platform/win/Skipped:

2009-08-17  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Oliver Hunt.

        Fix of <https://bugs.webkit.org/show_bug.cgi?id=28326> DRT on Windows doesn't support
        LayoutTestController::setQuota or print a callback on UIDelegate::exceededDatabaseQuota.

        Removed an early return that can cause deleteOrigin or deleteAllDatabases to fail when
        it doesn't have to.

        * storage/DatabaseTracker.cpp:
        (WebCore::DatabaseTracker::deleteOrigin):

Canonical link: https://commits.webkit.org/39041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47447 268f45cc-cd09-0410-ab3c-d52691b4dbfc