WebKitTools/DumpRenderTree/win/UIDelegate.cpp
@@ -43,6 +43,8 @@
 #include <WebKit/WebKit.h>
 #include <stdio.h>
 
+#include <atlbase.h>
+
 using std::wstring;
 
 class DRTUndoObject {
@@ -563,6 +565,17 @@ HRESULT STDMETHODCALLTYPE UIDelegate::exceededDatabaseQuota(
         /* [in] */ IWebSecurityOrigin *origin,
         /* [in] */ BSTR databaseIdentifier)
 {
+    CComBSTR protocol;
+    CComBSTR host;
+    unsigned short port;
+
+    origin->protocol(&protocol);
+    origin->host(&host);
+    origin->port(&port);
+
+    if (!done && gLayoutTestController->dumpDatabaseCallbacks())
+        printf("UI DELEGATE DATABASE CALLBACK: exceededDatabaseQuotaForSecurityOrigin:{%S, %S, %i} database:%S\n", protocol, host, port, databaseIdentifier);
+
     static const unsigned long long defaultQuota = 5 * 1024 * 1024;
     origin->setQuota(defaultQuota);
 
